Replace flot in vendors

--- a/app/index.jade
+++ b/app/index.jade
@@ -27,12 +27,13 @@ body(ng-app="myApp")
   script(src="bower_components/jquery/jquery.js")
   script(src="bower_components/angular/angular.js")
   script(src="bower_components/bootstrap/dist/js/bootstrap.js")
-  script(src="bower_components/flot/date.format.js")
-  script(src="bower_components/flot/jquery.flot.js")
-  script(src="bower_components/flot/jquery.flot.time.js")
-  script(src="bower_components/flot/curvedLines.js")
-  script(src="bower_components/flot/jquery.flot.selection.js")
-  script(src="bower_components/flot/jquery.flot.axislabels.js")
+
+  script(src="scripts/vendor/date.format.js")
+  script(src="scripts/vendor/flot/jquery.flot.js")
+  script(src="scripts/vendor/flot/jquery.flot.time.js")
+  script(src="scripts/vendor/flot/curvedLines.js")
+  script(src="scripts/vendor/flot/jquery.flot.selection.js")
+  script(src="scripts/vendor/flot/jquery.flot.axislabels.js")
 
   script(src="scripts/app.js")
   script(src="scripts/controllers/main.js")
