label display on chart

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -79,3 +79,12 @@ body {
     border-bottom: 0;
   }
 }
+
+#tooltipMeanStddev, #tooltipMax, #tooltipMin, #tooltipN {
+    position: absolute;
+    display: none;
+    border: 1px solid #fdd;
+    padding: 2px;
+    background-color: #fee;
+    opacity: 0.80;
+}
