--- a/app/index.jade
+++ b/app/index.jade
@@ -13,7 +13,8 @@ head
   link(rel="stylesheet" href="styles/main.css")
 
 body(ng-app="myApp")
-  div(ng-include="'views/main.html'")
+  div(ng-view)
+  //- div(ng-include="'views/main.html'")
 
   script(type='text/javascript').
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -26,6 +27,7 @@ body(ng-app="myApp")
 
   script(src="bower_components/jquery/jquery.js")
   script(src="bower_components/angular/angular.js")
+  script(src="bower_components/angular-route/angular-route.js")
   script(src="bower_components/bootstrap/dist/js/bootstrap.js")
 
   script(src="scripts/vendor/date.format.js")
