--- a/app/index.jade
+++ b/app/index.jade
@@ -38,5 +38,6 @@ body(ng-app="myApp")
   script(src="scripts/vendor/flot/jquery.flot.axislabels.js")
 
   script(src="scripts/app.js")
+  // script(src="scripts/directives/rightClick.js")
   script(src="scripts/controllers/main.js")
   script(src="scripts/services/chartsdata.js")
