--- a/app/views/charts.jade
+++ b/app/views/charts.jade
@@ -1,10 +1,13 @@
 div
-  input(type="text" ng-model="urlParameter")
+  input(type="text" ng-model="id")
   button(ng-click="drawYearChart()") draw Year chart
   button(ng-click="drawHourChart()") draw Hour chart
   //- button() Test
   div
     div(id="overview" style="margin-left:0px;margin-top:20px;width:1200px;height:50px")
+  div
+    div(id="chartN" style="width:1200px;height:300px" ng-right-click="zoomOut()")
+    div(id="tooltipN")
   div
     div(id="chartMeanStddev" style="width:1200px;height:300px" ng-right-click="zoomOut()")
     div(id="tooltipMeanStddev")
@@ -14,6 +17,3 @@ div
   div
     div(id="chartMin" style="width:1200px;height:300px" ng-right-click="zoomOut()")
     div(id="tooltipMin")
-  div
-    div(id="chartN" style="width:1200px;height:300px" ng-right-click="zoomOut()")
-    div(id="tooltipN")
