--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -80,7 +80,7 @@ body {
   }
 }
 
-#tooltipMeanStddev, #tooltipMax, #tooltipMin, #tooltipN {
+#tooltip- meanStddev, #tooltip-max, #tooltip-min, #tooltip-n {
     position: absolute;
     display: none;
     border: 1px solid #fdd;
