--- a/app/views/charts.jade
+++ b/app/views/charts.jade
@@ -6,14 +6,14 @@ div
   div
     div(id="overview" style="margin-left:0px;margin-top:20px;width:1200px;height:50px")
   div
-    div(id="chartN" style="width:1200px;height:300px" ng-right-click="zoomOut()")
-    div(id="tooltipN")
+    div(id="chart-n" style="width:1200px;height:300px" ng-right-click="zoomOut()")
+    div(id="tooltip-n")
   div
-    div(id="chartMeanStddev" style="width:1200px;height:300px" ng-right-click="zoomOut()")
-    div(id="tooltipMeanStddev")
+    div(id="chart-meanStddev" style="width:1200px;height:300px" ng-right-click="zoomOut()")
+    div(id="tooltip-meanStddev")
   div
-    div(id="chartMax" style="width:1200px;height:300px" ng-right-click="zoomOut()")
-    div(id="tooltipMax")
+    div(id="chart-max" style="width:1200px;height:300px" ng-right-click="zoomOut()")
+    div(id="tooltip-max")
   div
-    div(id="chartMin" style="width:1200px;height:300px" ng-right-click="zoomOut()")
-    div(id="tooltipMin")
+    div(id="chart-min" style="width:1200px;height:300px" ng-right-click="zoomOut()")
+    div(id="tooltip-min")
