--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -89,6 +89,14 @@ body {
     opacity: 0.80;
 }
 
-button.active {
+a.active {
   background-color: red;
+}
+
+button.red {
+  background-color: red;
+}
+
+button.green {
+  background-color: green;
 }
