--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -89,14 +89,6 @@ body {
     opacity: 0.80;
 }
 
-a.active {
+button.active {
   background-color: red;
-}
-
-button.red {
-  background-color: red;
-}
-
-button.green {
-  background-color: green;
 }
