--- a/app/views/main.jade
+++ b/app/views/main.jade
@@ -1,3 +1,3 @@
 div(ng-repeat="(chartName, adress) in chartsList")
   div
-    a(ng-href="/#/charts/{{adress}}?period=day") {{chartName}}
+    a(ng-href="/#/charts/{{adress}}") {{chartName}}
