rename condition, css classes

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -89,14 +89,10 @@ body {
     opacity: 0.80;
 }
 
-button.active {
-  background-color: red;
-}
-
-button.red {
-  background-color: red;
-}
-
-button.green {
+button.btn-active {
   background-color: green;
+}
+
+button.btn-selected {
+  background-color: grey;
 }
