Add loading indicator, text aligments, rename variables, remove scalelist, periods transform to array of objects, add link to main page, change isRefreshing button to checkobox

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,4 +1,5 @@
 @import "../bower_components/bootstrap/less/bootstrap.less";
+@import "../bower_components/angular-loading-bar/src/loading-bar.css";
 
 /* Space out content a bit */
 body {
@@ -89,10 +90,10 @@ body {
     opacity: 0.80;
 }
 
-button.btn-active {
+.btn-active {
   background-color: green;
 }
 
-button.btn-selected {
+.btn-selected {
   background-color: grey;
 }
