--- a/app/index.jade
+++ b/app/index.jade
@@ -29,6 +29,7 @@ body(ng-app="myApp")
   script(src="bower_components/angular/angular.js")
   script(src="bower_components/angular-route/angular-route.js")
   script(src="bower_components/bootstrap/dist/js/bootstrap.js")
+  script(src="bower_components/angular-loading-bar/src/loading-bar.js")
 
   script(src="scripts/vendor/date.format.js")
   script(src="scripts/vendor/flot/jquery.flot.js")
